--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -107,7 +107,6 @@ a {
     display: inline-flex;
     font-weight: 300;
     line-height: 1;
-    margin-bottom: $spacing-sm;
     text-decoration: none;
 
     &:hover {
@@ -132,8 +131,11 @@ a {
     display: inline-flex;
     font-family: 'Lato', sans-serif; 
     font-size: $font-size-default;
+    font-weight: $font-weight-normal;
+    justify-content: center;
     max-height: 35px;
     padding: $spacing-xs $spacing-sm;
+    text-align: center;
     text-decoration: none;
 
     &:hover {
@@ -141,6 +143,10 @@ a {
         color: $color-white;
         text-decoration: none;
     }
+}
+
+.es-code-toggle {
+    display: inline-block;
 }
 
 .es-button__icon {
@@ -160,17 +166,30 @@ a {
 
 .es-web-tool__sidebar-ctas {
     align-items: center;
-    display: flex;
+    // display: flex;
     justify-content: space-between;
     margin-bottom: $spacing-default;
+
+    .es-button {
+        margin-bottom: $spacing-sm;
+        width: 100%;
+    }
 }
 
 .es-web-tool__external-links-wrap {
     align-items: center;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: $spacing-default;
+}
+
+.es-web-tool__external-link-separator {
+    background: $color-gray-30;
+    border-radius: 50%;
+    display: inline-flex;
+    height: 6px;
+    margin: 0 $spacing-xs;
+    width: 6px;
 }
 
 .es-web-tool__legal {
